# sqlxrg

./: .gitignore  Cargo.toml  README.md
src/: commandline.rs  lib.rs  logic.rs  main.rs  req_res.rs
src/statics/: mod.rs
tests/: test.rs
